WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74891
Blur filter doesn't invalidate enough
https://bugs.webkit.org/show_bug.cgi?id=74891
Summary
Blur filter doesn't invalidate enough
Simon Fraser (smfr)
Reported
2011-12-19 15:05:06 PST
Created
attachment 119922
[details]
Testcase Blur doesn't take the blur radius into account when invalidating, resulting in repaint issues.
Attachments
Testcase
(606 bytes, text/html)
2011-12-19 15:05 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(19.95 KB, patch)
2011-12-22 16:36 PST
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-12-22 16:36:07 PST
Created
attachment 120408
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2011-12-22 16:36:19 PST
<
rdar://problem/10622089
>
Simon Fraser (smfr)
Comment 3
2011-12-22 16:56:45 PST
***
Bug 71929
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 4
2011-12-23 08:03:56 PST
Comment on
attachment 120408
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=120408&action=review
> Source/WebCore/rendering/RenderBox.cpp:1581 > + LayoutUnit topOutset; > + LayoutUnit rightOutset; > + LayoutUnit bottomOutset; > + LayoutUnit leftOutset; > + style()->filter().getOutsets(topOutset, rightOutset, bottomOutset, leftOutset);
Reads like an argument for an outsets struct.
Simon Fraser (smfr)
Comment 5
2011-12-23 09:02:29 PST
http://trac.webkit.org/changeset/103631
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug