Blur filter doesn't invalidate enough https://bugs.webkit.org/show_bug.cgi?id=74891

Source/WebCore:

Reviewed by Darin Adler.

Take the effects of filters into account for repainting; we need
to inflate the repaint rect by the outsets provided by the filter.

Test: css3/filters/filter-repaint.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeRectForRepaint):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::computeRectForRepaint):

LayoutTests:

Reviewed by Darin Adler.

Repaint test for the effects of a blur filter.

* css3/filters/filter-repaint-expected.txt: Added.
* css3/filters/filter-repaint-expected.png: Added.
* css3/filters/filter-repaint.html: Added.

Canonical link: https://commits.webkit.org/91936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103631 268f45cc-cd09-0410-ab3c-d52691b4dbfc